api-rag/deployment.yaml
# Creating MLflow deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codification-ape-rag-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codification-ape-rag-api
  template:
    metadata:
      labels:
        app: codification-ape-rag-api
    spec:
      containers:
        - name: codif-ape-rag-api
          image: meilametayebjee/codification-ape-graph-rag-api:v0.0.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: 30000m
              memory: 50Gi
            requests:
              cpu: 100m
              memory: 1Gi
