api-rag/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codification-ape-rag-api-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: codification-ape-rag-api
